// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TrojanParser > should parse a trojan URL with params 1`] = `
{
  "auth": {
    "password": "password",
  },
  "host": "example.com",
  "kind": "trojan",
  "network": "ws",
  "password": "password",
  "port": 443,
  "server": "example.com",
  "server_port": 443,
  "tag": "MyTrojanWsNode",
  "tags": [
    "MyTrojanWsNode",
  ],
  "tls": {
    "enabled": true,
    "insecure": false,
    "server_name": "sub.example.com",
    "sni": "sub.example.com",
  },
  "transport": {
    "path": "/ws-path",
    "type": "ws",
  },
  "type": "trojan",
  "version": "1.0.0",
}
`;

exports[`TrojanParser > should parse a typical trojan URL 1`] = `
{
  "auth": {
    "password": "password",
  },
  "host": "example.com",
  "kind": "trojan",
  "network": "tcp",
  "password": "password",
  "port": 443,
  "server": "example.com",
  "server_port": 443,
  "tag": "MyTrojanNode",
  "tags": [
    "MyTrojanNode",
  ],
  "tls": {
    "enabled": true,
    "insecure": false,
    "server_name": undefined,
    "sni": undefined,
  },
  "transport": {
    "path": undefined,
    "type": undefined,
  },
  "type": "trojan",
  "version": "1.0.0",
}
`;
